# aa-contacts

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  local.py  requirements.txt  urls.py
.github/: dependabot.yml
.github/workflows/: python-publish.yml  python-test.yml
.tx/: transifex.yml
aa_contacts/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  charlink_hook.py  models.py  providers.py  tasks.py  urls.py  views.py
aa_contacts/api/: __init__.py  common.py  permissions.py  schema.py
aa_contacts/api/alliance/: __init__.py  contacts.py  tokens.py
aa_contacts/api/corporation/: __init__.py  contacts.py  token.py  tokens.py
aa_contacts/locale/de/LC_MESSAGES/: django.mo  django.po
aa_contacts/locale/en/LC_MESSAGES/: django.po
aa_contacts/locale/it_IT/LC_MESSAGES/: django.mo  django.po
aa_contacts/migrations/: 0004_corpstandingfilter_alliancestandingfilter.py  0006_alliancetoken_last_modified_contacts_and_more.py  0007_alter_general_options_alliancecontactserverlink_and_more.py
aa_contacts/templates/aa_contacts/: alliance_contacts.html  base.html  contact_list.html  contacts.html  corporation_contacts.html  edit_contact.html  index.html  react_base.html  switch_frontend_version.html
aa_contacts/tests/: test_api.py  test_auth_hooks.py  test_charlink_hook.py  test_forms.py  test_models.py  test_tasks.py  test_views.py  utils.py
frontend/: copy-assets.sh  copy-langs.sh  eslint.config.js  i18next.config.ts  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/i18n/de/: translation.json
frontend/i18n/en/: translation.json
frontend/i18n/it-IT/: translation.json
frontend/i18n/it_IT/: translation.json
frontend/src/: App.tsx
frontend/src/api/: ApiClient.ts  Schema.d.ts  api.ts
frontend/src/components/: DataTableBase.tsx  ErrorPage.tsx  Loading.tsx
frontend/src/components/contacts/: ContactList.tsx  ContactListHeader.tsx  ContactNotesModal.tsx  ContactTable.tsx  CopyButton.tsx  ServerLinkModal.tsx
frontend/src/components/dashboard/: AddTokenMenuEntries.tsx  AlliancesSection.tsx  CorporationsSection.tsx  Dashboard.tsx  TokenPortrait.tsx
frontend/src/components/tables/: DataTableBase.tsx  DataTables.css
testauth/settings/: base.py  local.py
